# nash

./: Cargo.toml  README.md
src/: main.rs
src/builtins/: cat.rs  cd.rs  clear.rs  cp.rs  cut.rs  echo.rs  env.rs  file.rs  find.rs  grep.rs  head_tail.rs  help.rs  history.rs  jq.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  pwd.rs  rm.rs  sed.rs  sort.rs  stat.rs  touch.rs  tree.rs  uniq.rs  util.rs  wc.rs  which.rs
src/cli/: mod.rs
src/parser/: ast.rs  lexer.rs  mod.rs
src/runtime/: context.rs  executor.rs  mod.rs  output.rs
src/vfs/: mod.rs  mount.rs  node.rs  path.rs
